--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "formik": "^2.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "react-select-search": "^2.1.0",
+    "redux": "^4.0.5",
     "yup": "^0.29.3"
   },
   "scripts": {
